Add display_name attribute to SPHandlers

--- a/flask_saml2/idp/templates/flask_saml2_idp/login.html
+++ b/flask_saml2/idp/templates/flask_saml2_idp/login.html
@@ -5,10 +5,10 @@
         You are now signed in at the Identity Provider.
         <br />
         <span id="logged_in_message_continue">
-            Click Continue to return to the Service Provider.
+            Click Continue to return to <strong>{{ handler }}</strong>.
         </span>
         <span id="logged_in_message_automatic" style="display:none">
-            You will now be automatically redirected to the Service Provider.
+            You will now be automatically redirected to <strong>{{ handler }}</strong>.
         </span>
     </div>
 
